# ssh-bin-paste

./: .gitignore  Cargo.toml  README.md  package-lock.json  package.json
docs/: gif-generation.md
host/macos/: clipboard-capture.swift  paste-up.swift  service.sh  shortcut-recorder.swift
native/: clipboard-capture.swift  clipboard-image.swift  paste-daemon.swift
native/macos/: paste-up.swift
remote/: ssh-bin-paste-remote.sh
scripts/: install.sh
src/: assets.rs  bridge.rs  cli.ts  clipboard.rs  clipboard.ts  config-command.ts  config.rs  config.ts  config_command.rs  daemon.rs  daemon.ts  doctor.rs  doctor.ts  lib.rs  main.rs  panes.rs  panes.ts  paste.rs  paste.ts  remote-cache.ts  remote-helper.ts  remote-install.ts  remote_cache.rs  remote_helper.rs  remote_install.rs  setup.rs  ssh.rs  ssh.ts  start.rs  start.ts
src-rs/: assets.rs  config.rs  config_command.rs  doctor.rs  lib.rs  main.rs  panes.rs  ssh.rs
src/agent/: insertion.rs  mod.rs  start.rs  tmux.rs
src/transfer/: cache.rs  mod.rs
tests/: config.test.ts  panes.test.ts  remote-helper.test.ts  ssh.test.ts
