[package]
name = "ssh-bin-paste"
version = "0.1.0"
edition = "2024"
description = "Paste local clipboard images into remote terminal agents over SSH."
license = "MIT"

[lib]
path = "src-rs/lib.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.19", features = ["v4"] }
